# RICOMR-Benchmark

./: README.md  bootstrap.sh  echoer.py  echoer_kafka.py  frequency.py  init_ros_sim.py  latency.py  latency_kafka.py  moveit_crowd.launch  moveit_planning_execution.launch  publisher.py  publisher_kafka.py  requirements.yml  rviz.rviz  spawn_controllers.py  start_kafka_simulation.sh  start_ros_control.sh  start_ros_sim.sh  subscriber.py  throughput.py  top.sh  topic_echo.py  topic_subs_kafka.py  topic_subscribers.py  ur5_crowd_bringup.launch
ROS2/: bootstrap.sh  cyclone_profile.xml  readme.txt
ROS2/src/robot_benchmark/: CMakeLists.txt  package.xml
ROS2/src/robot_benchmark/config/ur/ur5/: visual_parameters.yaml
ROS2/src/robot_benchmark/launch/: automate.py  echoer_ros2.py  gazebo_launch_empty_world.launch.py  gazebo_spawn_robots.launch.py  latency_ros2.py  moveit2_planner.py  publisher_ros2.py  subscribers
ROS2/src/robot_benchmark/msg/: CustomHeader.msg
ROS2/src/robot_benchmark/urdf/ur/ur5/: ur_macro.xacro  ur_urdf.xacro
interfaces/: kafka_admin.py  kafka_producer.py  moveit_interface.py  planning_execution.py  ros_interface.py
